# git-jump

./: Cargo.toml  README.md
src/: config.rs  fzf.rs  main.rs  tempfile.rs
