[package]
name = "git-jump"
version = "0.1.4"
edition = "2021"
description = "Quickly jump to any version-controlled repository on the system. Requires fzf and plocate."
license-file = "LICENSE.md"

[dependencies]
home = "0.5.9"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
